syntax = "proto3";

package  checkout;

option go_package = "/checkout";

service CheckoutService {
  rpc Checkout(CheckoutReq) returns (CheckoutResp) {}
}
message CreditCardInfo {
  string credit_card_number = 1;
  int32 credit_card_cvv = 2;
  int32 credit_card_expiration_year = 3;
  int32 credit_card_expiration_month = 4;
}
message CartItem {
  uint32 product_id = 1;
  int32  quantity = 2;
}

message Address {
  string street_address = 1;
  string city = 2;
  string state = 3;
  string country = 4;
  int32 zip_code = 5;
}

message CheckoutReq {
  uint32 user_id = 1;
  string currency = 2;
  string firstname = 3;
  string lastname = 4;
  string email = 5;
  Address address = 6;
  CreditCardInfo credit_card = 7;
  repeated CartItem cart_items = 8;
}

message CheckoutResp {
  string order_id = 1;
  string transaction_id = 2;
}